<resources>
    <string name="app_name">Todo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="activity_login_et_user">用户名</string>
    <string name="activity_login_et_password">密码</string>
    <string name="activity_login_btn_login">登录</string>
    <string name="activity_login_tv_register">没有账号？点击注册</string>

    <string name="activity_register_et_user">用户名</string>
    <string name="activity_register_et_password">密码</string>
    <string name="activity_register_et_verify_password">确认密码</string>
    <string name="activity_register_btn_register">注册</string>

    <string name="activity_add_et_title">标题</string>
    <string name="activity_add_et_content">内容</string>
</resources>
